RESOLVED FIXED242493
Existing floatingObject->originatingLine() is not always an incorrect state with security implication
https://bugs.webkit.org/show_bug.cgi?id=242493
Summary Existing floatingObject->originatingLine() is not always an incorrect state w...
alan
Reported 2022-07-07 19:19:36 PDT
Attachments
Patch (1.80 KB, patch)
2022-07-07 19:42 PDT, alan
no flags
alan
Comment 1 2022-07-07 19:42:05 PDT
EWS
Comment 2 2022-07-08 06:21:45 PDT
Committed 252269@main (4bfe200db44b): <https://commits.webkit.org/252269@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460755 [details].
Radar WebKit Bug Importer
Comment 3 2022-07-08 06:22:15 PDT
Note You need to log in before you can comment on or make changes to this bug.