Existing floatingObject->originatingLine() is not always an incorrect state with security implication https://bugs.webkit.org/show_bug.cgi?id=242493

Reviewed by Simon Fraser.

The float object's originating line is the line box where we see the float first. Having duplicate originating line is an incorrect state which may lead to a security issue. However re-assigning the same line should not be considered one.

* Source/WebCore/rendering/LegacyLineLayout.cpp:
(WebCore::LegacyLineLayout::determineStartPosition):

Canonical link: https://commits.webkit.org/252269@main